# dataset-browser

./: .env.sample  .gitignore  Pipfile  README.md  ansible.cfg  justfile  makefile  pyproject.toml  settings.json
.github/workflows/: deploy.yml  run-actions.yml  tests.yml
ansible/: create_keyfile_for_actions.sh  deploy.yml  testing.yml
ansible/inventories/: prod  prod.yml
ansible/templates/: dotenv.j2  nginx.conf.j2  refresh_datasets.sh.j2  run_dataset_browser.sh.j2  supervisor.dataset_browser.conf.j2  systemd.dataset_browser.service.j2
static/css/: overrides.css
templates/: database.html  index.html  table.html  tgwf_base.html
templates/pages/: about.html
templates/partials/: nav_menu.html
tests/: test_tgwf_datasette.py
