[project]
name = "dataset-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasette",
    "datasette-gunicorn",
    "datasette-pretty-traces",
    "duckdb>=1.1.3",
    "sqlite-utils",
]

[tool.setuptools.packages.find]
include = ["tgwf_datasette*"]
exclude = ["static*", "ansible*", "templates*", "notebooks*"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.12.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
    "pytest-coverage>=0.0",
    "ansible",
    "marimo>=0.10.17",
]
